Toc fix (#323)
* toc fixes - added scroll if overflows, fixed active link, limited content width if toc is visible

* pr fixes

* toc- update content when moving between pages + scroll to active link on first load

* fix scroll and some issues

* bigger max_old_space_size in ci

* installing missing deps

* more dependencies

* holy grail layout for the entire page

* apply new layout to the sidebar

* remove debugging hints

* apply the new layout to the ToC

* remove hack

* replace image to bitcli/bit

* update github actions

* breakpoints component

* using breakpoints component in TOC

* cleanup

* styles fix

--- a/docs/plugins/docs/table-of-contents/table-of-contents.module.scss
+++ b/docs/plugins/docs/table-of-contents/table-of-contents.module.scss
@@ -1,20 +1,26 @@
-@import "~@teambit/base-ui.layout.breakpoints/_breakpoints.scss";
+@use "~@teambit/design.responsive.breakpoints/_breakpoints.module.scss";
 
-.tableOfContent {
-  position: sticky;
-  flex-shrink: 0;
+$tocWidth: 264px;
+
+// toc wrapper that holds the position in the page that pushes the rest of the elements in the page
+.tocWrapper {
   margin-left: 32px;
-  top: 120px;
-  bottom: 0;
-  right: 8px;
-  [data-element-type="H3"] {
-    padding-left: 16px;
-  }
+  width: $tocWidth;
+  flex: none;
 
-  @media screen and (max-width: $br-lg) {
+  @include breakpoints.media-lg {
     display: none;
   }
 }
-.closedStickyBanner {
-  top: 56px;
+
+// the table itself. separated in order to allow scroll in the table content
+.tableOfContent {
+  position: absolute;
+  overflow-y: auto;
+  padding-top: 16px;
+  box-sizing: border-box;
+
+  [data-element-type="H3"] {
+    padding-left: 16px;
+  }
 }
